 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 4
============
* [DanielPharos]: Fixed orangebox compiler not working.

* [DanielPharos]: Adjusted for newest Steam release (QuArKSAS 1.02). Also, fixed various Steam-related issues.

* [DanielPharos]: Massive update to GCF file loading. This should fix most "cannot find GCF file" type problems.

* [cdunde]: Update to merge bones data for .gr2 attachments models.

* [cdunde]: Update of grnreader.exe to eliminate multiple outputs of group mesh vertices to .ms file and .gr2
          - importer to eliminate multiple output.ms file listings of bones and proper vertex weight assigning.

* [cdunde/DanielPharos]: Updates for .gr2 bones to use our same code and load their bones correctly.

* [cdunde]: Added option to only draw drag bones to speed up drag drawing if a lot of bones exist.

* [cdunde]: Fixes for individual bone selection and handle color change.

* [cdunde/DanielPharos]: To add bone vertex and weight assignment and improve output.ms file data.

* [cdunde]: DanielPharos's great fix for bones corner handle drag code.

6.6.0 Beta 3
============
* [cdunde]: Added keyframe fill-in frames creation support for single and multiple component selections.

* [cdunde]: Added complete section in the InfoBase Docs for the Model Editor about tags with F1 links.

* [cdunde/DanielPharos]: Added support for .md3 animationCFG (configuration) support and editting.

* [cdunde/DanielPharos]: Added support for animation interpolation in the Model Editor.
          - (computation of added movement to emulate game action)

* [cdunde]: Setup function to attach tags for imported .md3 models, such as weapons.

* [cdunde]: Setup of tag menus and icons.
